package seedu.duke.flashutils.commands;

/**
 * Adds a flashcard to flashcard set.
 */
public class AddCommand extends Command {

    public static final String COMMAND_WORD = "add";

    // Confirmation message to be displayed to user, with placeholder for flashcard details
    public static final String SUCCESS_MESSAGE = "Successfully added flashcard: %1$s";

}
